--- a/Project-2-Report.tex
+++ b/Project-2-Report.tex
@@ -36,7 +36,7 @@ To make this project fancier, we are dived into a situation where the original s
  
  \section{Resolution}
  
- In order to do so, we apply an equalizer (an other filter) of order $L$ such as 
+ In order to do so, we apply an equaliser (an other filter) of order $L$ such as 
  \begin{equation}\label{eq:bt}
  { \hat{b}_{r}(k) = \sum\limits_{l=0}^{L}w(l)~r(k-l) \approx b(k) },
  \end{equation}
