--- a/Project-2-Report.tex
+++ b/Project-2-Report.tex
@@ -2,7 +2,7 @@
 
 \usepackage[margin=0.5in]{geometry}
 
-\usepackage{amsfonts,amsmath,amssymb,amsthm,bm,relsize,textcomp}
+\usepackage{amsfonts,amsmath,amssymb,amsthm,bm,relsize,textcomp,xcolor}
 \usepackage{balance}
 \usepackage{graphicx}
 \usepackage[bottom]{footmisc}
@@ -10,8 +10,7 @@
 \begin{document}
 
 \title{Project Assignment 2: Report}
-\author{Johannes Lemonde 960911-T357 and Lucas Streit 970606-T???}
-mettre le numéro personnel de Lucas
+\author{Johannes Lemonde 960911-T357 and Lucas Streit 970606-T232}
 
 \maketitle
 
@@ -27,11 +26,11 @@ To make this project fancier, we are dived into a situation where the original s
 
 \section{Formalisation of the problem}
 
- The original binary signal -- the key -- is composed by a sequence ${b(k)\in \{-1,1\}}, ~~{k\in[1, M]\subset\mathbb{N}}$, where $M$ is the length of the key.\footnote{Actually, the key is originally composed by a sequence ${s(k)\in\{0,1\}}$, but we map it with the sequence ${b(k)\in\{-1, 1\}}$.}
- The values ${b(1),~\dots~, b(N)}$ --~referred to as the training sequence~-- are known to us, with ${N=32}$.
+ The original binary signal -- the key -- is composed by a sequence ${b(k)\in \{-1,1\}}, ~~{k\in[1, N]\subset\mathbb{N}}$, where $N$ is the length of the key.\footnote{Actually, the key is originally composed by a sequence ${s(k)\in\{0,1\}}$, but we map it with the sequence ${b(k)\in\{-1, 1\}}$.}
+ The values ${b(1),~\dots~, b(M)}$ --~referred to as the training sequence~-- are known to us, with ${M=32}$.
  Before it was transmitted, the key has been subjected to an unknown filter $h$ of order ${3}$ and to the white noise $n(k)$ such as 
  \begin{equation}\label{eq:r}
- { r(k) = \sum\limits_{l=0}^{3}h(l)~b(k-l)~+n(k),~~k\in[1,M]\subset\mathbb{N} }.
+ { r(k) = \sum\limits_{l=0}^{3}h(l)~b(k-l)~+n(k),~~k\in[1,N]\subset\mathbb{N} }.
  \end{equation}
  These values of $r$ are known to us, and we are asked to reconstruct the sequence $b$.
  
@@ -41,7 +40,7 @@ To make this project fancier, we are dived into a situation where the original s
  \begin{equation}\label{eq:bt}
  { \hat{b}_{r}(k) = \sum\limits_{l=0}^{L}w(l)~r(k-l) \approx b(k) },
  \end{equation}
- where the coefficients ${w(0)},~{\dots~},{w(L+1)}$ must be initialised using the training sequence. To do so, we define a matrix $\bm{R}$, a vector $\bm{w}$ and a vector $\bm{b}$ so that $\bm{Rw}=\bm{b}$ represent the equations in (\ref{eq:bt}). Since $r(k)$ does not have values for $k$ being null or negative, and since we have this subtraction of $l$ in the argument of $r$ in (\ref{eq:bt}), we can only use (\ref{eq:bt}) for $k = L+1,~\dots~, N$, which thus gives $\bm{Rw}=\bm{b} \Leftrightarrow $
+ where the coefficients ${w(0)},~{\dots~},{w(L+1)}$ must be initialised using the training sequence. To do so, we define a matrix $\bm{R}$, a vector $\bm{w}$ and a vector $\bm{b}$ so that $\bm{Rw}=\bm{b}$ represent the equations in (\ref{eq:bt}). Since $r(k)$ does not have values for $k$ being null or negative, and since we have this subtraction of $l$ in the argument of $r$ in (\ref{eq:bt}), we can only use (\ref{eq:bt}) for $k = L+1,~\dots~, M$, which thus gives $\bm{Rw}=\bm{b} \Leftrightarrow $
 \begin{equation}\label{eq:matrixes}
 \begin{pmatrix}
     \mathsmaller{r(L+1)}   & \mathsmaller{r(L)} & \mathsmaller{\cdots}  & \mathsmaller{r(1)} \\
@@ -49,7 +48,7 @@ To make this project fancier, we are dived into a situation where the original s
     \mathsmaller{\vdots}   & \mathsmaller{\vdots} & \mathsmaller{\cdots} & \mathsmaller{\vdots} \\
     \mathsmaller{r(k)}     & \mathsmaller{r(k+1)} & \mathsmaller{\cdots} & \mathsmaller{r(k-L)} \\
     \mathsmaller{\vdots}   & \mathsmaller{\vdots} & \mathsmaller{\cdots} & \mathsmaller{\vdots} \\
-    \mathsmaller{r(N)} & \mathsmaller{r(N-1)} & \mathsmaller{\cdots}  & \mathsmaller{r(N-L)}
+    \mathsmaller{r(M)} & \mathsmaller{r(M-1)} & \mathsmaller{\cdots}  & \mathsmaller{r(M-L)}
 %   a & b
 \end{pmatrix}
 \cdot
@@ -66,13 +65,19 @@ To make this project fancier, we are dived into a situation where the original s
    \mathsmaller{\vdots}\\
    \mathsmaller{b(k)}\\
    \mathsmaller{\vdots}\\
-   \mathsmaller{b(N)}
+   \mathsmaller{b(M)}
 \end{pmatrix}
 \end{equation}
 
-Notice that $\bm{R}$ is not square for any value of $L$, so the system might have much more equations than unknowns. Thus, resolving the system for $\bm{w}$ results in resolving it in the approximation of the least squares: $\bm{w} \approx (\bm{R}^{T}\bm{R})^{-1}\bm{R}^{T}~\bm{b}$. Matlab does this automatically for non-square matrices with the command \texttt{w~=~R\textbackslash b}.
+\definecolor{my-light-blue}{HTML}{3399cc}
+Notice that $\bm{R}$ is not square for any value of $L$, so the system might have much more equations than unknowns. Thus, {\color{my-light-blue}the most straightforward way to solve the system for $\bm{w}$ is to resolve it} in the approximation of the least squares: $\bm{w} \approx (\bm{R}^{T}\bm{R})^{-1}~\bm{R}^{T}\bm{b}$. Matlab does this automatically for non-square matrices with the command \texttt{w~=~R\textbackslash b}.
 
-Once these coefficients $\bm{w}$ are computed, we can freely use the equation (\ref{eq:bt}) to get the estimated values $\hat{b}_{r}(k)$ of the whole signal (for $k \leq N$, and especially for $k \leq L$, we use the known training sequence directly, instead), but we still need to convert them to a binary sequence. In order to do so, we apply a sign detector on the real-valued estimator of $b$, which gives: $\hat{b}(k) = sign(\hat{b}_{r}(k)) = \{_{-1,~\hat{b}_{r}(k) \leq 0}^{+1,~\hat{b}_{r}(k) > 0}$.
+{\color{my-light-blue} Notice also that this least-squares solution for the coefficients $\bm{w}$ is per definition the solution which minimises the mean square error defined by ${MSE = \mathbb{E}\{(b(k)-\hat{b}_r(k))^2\}},~{k\in[L+1, M]\subset \mathbb{N}}$. 
+%Thus, it minimises the same criterion as the causal finite impulse response (FIR) Wiener filter would. The FIR Wiener filter in itself can however not easily be used here as we are not aware of the spectral characteristics or autocorrelation functions of the signals. 
+The causal finite impulse response (FIR) Wiener filter --~which is an other filter~-- would also minimise the mean square error, but works using the autocorrelation and the cross-correlation functions of the signals, which we do not have at our disposal. An approach to use this filter anyway could be to compute estimates of these functions from the training sequence. But even if the Wiener filter is in the general case an optimal filter, using it with estimates (affected by the noise) makes it no much better than the least-squares approach we used. Indeed, the matrix ${(\bm{R}^T\bm{R})}$ in the least-squares approach is itself an approximate of the matrix of autocorrelation which would be used in the Wiener filter, and the same applies for ${(\bm{R}^T\bm{b})}$ which is an approximate of the vector of cross-correlation. As a reminder, the Wiener filter would have been used like this: ${\bm{w}\approx\bm{T}_{acf}^{-1}\bm{v}_{cross}}$. Unfortunately, neither approach gives a perfect, optimal solution, due to the noise $n(k)$ present in the signal $r(k)$. A training sequence of arbitrarily short, finite length $M=32$ does indeed not permit the effects of the noise to converge towards zero.
+}
+
+Once these coefficients $\bm{w}$ are computed, we can freely use the equation (\ref{eq:bt}) to get the estimated values $\hat{b}_{r}(k)$ of the whole signal (although for $k \leq M$, and especially for $k \leq L$ where the equation cannot be used, we use the known training sequence directly, instead), but we still need to convert them to a binary sequence. In order to do so, we apply a sign detector on the real-valued estimator of $b$, which gives: $\hat{b}(k) = sign(\hat{b}_{r}(k)) = \{_{-1,~\hat{b}_{r}(k) \leq 0}^{+1,~\hat{b}_{r}(k) > 0}$.
 
 \section{Optimisation of the equaliser's order $L$}
 We have now everything needed to reconstruct the key, apart from $L$. Indeed, the accuracy of the recovery of the key depends on the choice made for the order of the equaliser.
@@ -90,13 +95,13 @@ On the first hand, having a really low order $L$ for the equaliser would be insu
 \label{fig:f2}
 \end{figure}
 
-On the other hand, increasing the order $L$ results in decreasing the amount of linear equations and thus the amount of values of the training sequence we are going to be able to use. Indeed, the amount of equations is equal to $N-L$ while the amount of unknowns is $L+1$. 
+On the other hand, increasing the order $L$ results in decreasing the amount of linear equations and thus the amount of values of the training sequence we are going to be able to use. Indeed, the amount of equations is equal to $M-L$ while the amount of unknowns is $L+1$. 
 
-For a great order $L > \frac{N-1}{2} = 15.5$, the system of equations is under-determined and this results in very few values $b(k)$ determining a large amount of coefficients $w(k)$ as if one tried to project a vector into a greater dimension as its own: an infinity of solutions exist. Even if the training sequence $b(k)$ for ${k=L+1,~\dots~, N}$ can be recovered perfectly with $\hat{b}_{r}(k)$, the extrapolation on further values of the key does not work. In this case, the key contains to many errors to decipher the image accurately (see third image in figure \ref{fig:f1}).
+For a great order $L > \frac{M-1}{2} = 15.5$, the system of equations is under-determined and this results in very few values $b(k)$ determining a large amount of coefficients $w(k)$ as if one tried to project a vector into a greater dimension as its own: an infinity of solutions exist. Even if the training sequence $b(k)$ for ${k=L+1,~\dots~, M}$ can be recovered perfectly with $\hat{b}_{r}(k)$, the extrapolation on further values of the key does not work. In this case, the key contains to many errors to decipher the image accurately (see third image in figure \ref{fig:f1}).
 
-%ERROR-ERROR-ERROR-ERROR-For $L=\frac{1}{2}(N-1)$, if $N$ was odd, the matrix $\bm{R}$ would be square and there would be exactly one solution to the system of linear equations -- under the assumption that no equation is a linear combination of other equations. 
+%ERROR-ERROR-ERROR-ERROR-For $L=\frac{1}{2}(M-1)$, if $M$ was odd, the matrix $\bm{R}$ would be square and there would be exactly one solution to the system of linear equations -- under the assumption that no equation is a linear combination of other equations. 
 
-For $L < \frac{N-1}{2} = 15.5$, the system of equations is over-determined and its solution is in the sense of the least-squares. Considering the fact that the equations around the training sequence are not necessarily perfectly representative of the following of the key, due for example to aberrant noise values misleading the calculation of the coefficients $w(k)$, it seems to be an advantage to have (some) degrees of over-determination.
+For $L < \frac{M-1}{2} = 15.5$, the system of equations is over-determined and its solution is in the sense of the least-squares. Considering the fact that the equations around the training sequence are not necessarily perfectly representative of the following of the key, due for example to aberrant noise values misleading the calculation of the coefficients $w(k)$, it seems to be an advantage to have (some) degrees of over-determination.
 
 Empirically, the accuracy of the key recovery is the best for $L=12$ or $L=13$, quite good for ${L \in [7,14] \subset \mathbb{N}}$, while the image is only just recognisable for $L=15$.
 
@@ -122,7 +127,7 @@ h(l) =
 	\end{array}
 \right.
 $$
-and white noise $n(k) \stackrel{\text{i.i.d.}}{\sim } \mathcal{N}(0, 0.2^2)$, we obtain for the mean square error ${MSE = \frac{1}{M}\sum\limits_{k=1}^{M}(\hat{b}(k)-b(k))^2}$ in function of the equaliser's order $L$ the graph shown in figure \ref{fig:g}, which seems to confirm our suspicions.
+and white noise $n(k) \stackrel{\text{i.i.d.}}{\sim } \mathcal{N}(0, 0.1^2)$, we obtain for the mean square error ${MSE = \frac{1}{N}\sum\limits_{k=1}^{N}(\hat{b}(k)-b(k))^2}$ in function of the equaliser's order $L$ the graph shown in figure \ref{fig:g}, which seems to confirm our suspicions.
 \begin{figure}[h]
    \begin{center}
       \includegraphics[width=.8\linewidth]{tse4.png}
@@ -131,7 +136,7 @@ and white noise $n(k) \stackrel{\text{i.i.d.}}{\sim } \mathcal{N}(0, 0.2^2)$, we
 \caption{The MSE increases drastically from the point where the system is under-determined ($L\geq 16$).}
 \label{fig:g}
 \end{figure}
-Obviously, we do not have at our disposal the actual function $h$, nor the actual realisations of the Gaussian white noise, nor even its variance, and according to the many invocations of randomness during the generation of the key (random ciphering of the image) and the noise, the shape of this graph does change a lot from an execution to another. However, the amount of errors seems to be always drastically higher for $L > \frac{N-1}{2}$, while is remains low for an order $L$ between $1$ and $15$, especially in the upper middle of this range.
+Obviously, we did not have at our disposal the actual function $h$, nor the actual realisations of the Gaussian white noise, nor even its variance, and according to the many invocations of randomness during the generation of the noise and the key (random ciphering of the image), the shape of this graph does change a lot from an execution to another. However, the amount of errors seems to be always drastically higher for $L > \frac{M-1}{2}$, while it remains low for an order $L$ between $1$ and $15$, especially in the upper middle of this range.
 
 
 
@@ -152,9 +157,9 @@ In this section of the report, we are going to discuss the impact of the inserti
 
 Nevertheless, in this specific case, the algorithm seems to traduce \textit{linearly} the amount of inserted bit errors as amount of permutations of lines, rows or colours of pixels.\footnote{Images are seen here as a tridimensional matrix where the third dimension is the intensity of red, green and blue of the pixels. The ciphering/deciphering algorithm swaps basically plans within the matrix representing the image. Since the third dimension is only made by three plans while the other two dimensions are made up by as many plans as the image's amount of row or columns, and since the algorithm seems to pick uniformly which permutation it is about to perform, the probability to swap colours is quite low. Here, the matrix' dimensions are 1015x950x3.}
 
-Using this, we can visually suppose that our performance recovering the key with $L=12$ gave about $10^2$ bit errors, and with $L=15$ it was less than $10^3$ errors, for a key length of ${19712}$; in other words, respectively about $0.5\%$ and less than $5\%$.
+Using this, we can visually suppose that our performance recovering the key with $L=12$ gave about $10^2$ bit errors, and with $L=15$ it was less than $10^3$ errors, for a key length of ${19712}$; in other words, respectively about $99.5\%$ and more than $95\%$ of accuracy were obtained.
 
-Moreover, we find that the limit to recognise the subject of the image lies around these $10^{3}$ bit errors, corresponding to $5\%$. 
+Moreover, we find that the limit to recognise the subject of the image lies around these $10^{3}$ bit errors, corresponding to $95\%$ of accuracy. 
 
 
 \section{Conclusion}
@@ -167,6 +172,10 @@ With this project, we have been able to understand the basic functioning of some
 
 \bibitem{HanOttHjalm}
 P. Handel, R. Ottoson, H. Hjalmarsson, \emph{Signal Theory}, KTH, 2012
+\bibitem{Wik1}
+Wikipedia: https://en.wikipedia.org/wiki/Wiener\_filter
+\bibitem{Wik2}
+Wikipedia: https://en.wikipedia.org/wiki/Linear\_least\_squares
 
 \end{thebibliography}
 
